...
  }
}

class NewList extends Component {
  render () {
    return (
      <TouchableOpacity testID='NewListButton' onPress={() => this.props.onPress()} style={styles.newContainer}>
        <View style={styles.newInnerContainer}>
          <Text style={styles.newContainerText}>Create new travel list</Text>
        </View>
      </TouchableOpacity>
    )
  }
...
